--- a/main.mustache
+++ b/main.mustache
@@ -65,7 +65,7 @@
 <h2 align="center">Connect with me:</h2>
 <div align="center">
   <span><a href="https://linkedin.com/in/kiran-karandikar"><img src="https://img.shields.io/badge/linkedin-0078D4?style=for-the-badge&logo=linkedin&logoColor=white"/></a></span>
-  <span><a href="mailto:khkarandikar@gmail.com"><img src="https://img.shields.io/badge/Gmail-red?style=for-the-badge&logo=Gmail&logoColor=white"/></a></span>
+  <span><a href="mailto:connect.funnel.github@kirankarandikar.com"><img src="https://img.shields.io/badge/Gmail-red?style=for-the-badge&logo=Gmail&logoColor=white"/></a></span>
 </div>
 <br />
 
